--- a/project-tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/project-tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -61,9 +61,9 @@
     "lines = text.split('\\n')\n",
     "print('Number of lines: {}'.format(len(lines)))\n",
     "word_count_line = [len(line.split()) for line in lines]\n",
-    "print('Average number of words in each line: {}'.format(np.average(word_count_line)))\n",
+    "print('Average number of words in each line: {}\n'.format(np.average(word_count_line)))\n",
     "\n",
-    "print()\n",
+    
     "print('The lines {} to {}:'.format(*view_line_range))\n",
     "print('\\n'.join(text.split('\\n')[view_line_range[0]:view_line_range[1]]))"
    ]
